# lawnch-plugins

./: CMakeLists.txt  LICENSE  README.md  flake.nix  result
cmake/: LawnchPluginApiConfig.cmake.in
include/lawnch/: lawnch_plugin_api.h  plugin_base.hpp
plugins/calculator/: CMakeLists.txt  calculator.cpp  package.nix  pinfo
plugins/clipboard/: CMakeLists.txt  clipboard.cpp  package.nix  pinfo
plugins/command/: CMakeLists.txt  command.cpp  package.nix  pinfo
plugins/emoji/: CMakeLists.txt  deps.nix  emoji.cpp  package.nix  pinfo
plugins/files/: CMakeLists.txt  files.cpp  package.nix  pinfo
plugins/files-nav/: CMakeLists.txt  files-nav.cpp  pinfo
plugins/google/: CMakeLists.txt  deps.nix  google.cpp  package.nix  pinfo
plugins/powermenu/: CMakeLists.txt  package.nix  pinfo  powermenu.cpp
plugins/wallpapers/: CMakeLists.txt  package.nix  pinfo  wallpapers.cpp
plugins/youtube/: CMakeLists.txt  package.nix  pinfo  youtube.cpp
