cmake_minimum_required(VERSION 3.17)
project(command LANGUAGES CXX)

find_package(LawnchPluginApi REQUIRED)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(command SHARED
	command.cpp
)

target_link_libraries(command PRIVATE
	Lawnch::LawnchPluginApi
)

set_target_properties(command PROPERTIES
	PREFIX ""
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
)

install(TARGETS command
	DESTINATION .
)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pinfo
	DESTINATION .
)
